use StandardCharsets.UTF_8 instead of utf8 lookup, eliminates the need for the UnsupportedEncodingException